--- a/docs/导航页技术文档.md
+++ b/docs/导航页技术文档.md
@@ -306,11 +306,51 @@ quality: medium
 | pdf | pdf-tools | PDF 工具 |
 | image | image-tools | 图像工具 |
 
+### 首页分类入口
+
+首页通过 `categoryPages` 数组预设分类入口卡片，即使没有工具也会显示：
+
+位置：`frontend/main/src/app/[locale]/page.tsx`
+
+```typescript
+const categoryPages = [
+  {
+    id: 'pdf-tools',
+    name: { en: 'PDF Tools', zh: 'PDF 工具', es: 'Herramientas PDF' },
+    description: {
+      en: 'Merge, compress, split and convert PDF files',
+      zh: '合并、压缩、拆分和转换 PDF 文件',
+      es: 'Fusionar, comprimir, dividir y convertir archivos PDF'
+    },
+    icon: '📄',
+    gradient: 'linear-gradient(135deg, #FF6B6B 0%, #C92A2A 100%)'
+  },
+  {
+    id: 'image-tools',
+    name: { en: 'Image Tools', zh: '图像工具', es: 'Herramientas de imagen' },
+    description: { ... },
+    icon: '🖼️',
+    gradient: 'linear-gradient(135deg, #51CF66 0%, #2F9E44 100%)'
+  }
+];
+```
+
+### 导航栏分类下拉菜单
+
+导航栏始终显示 PDF Tools 和 Image Tools 下拉菜单，无论是否有工具：
+
+位置：`frontend/main/src/components/layout/Header.tsx`
+
+- 有工具时：显示工具列表（最多6个）+ "查看全部"链接
+- 无工具时：显示"即将推出更多工具"提示 + "查看全部"链接
+
 ### 添加新分类
 
-1. 修改 `frontend/main/src/app/[locale]/page.tsx` 中的 `categoryMeta`
+1. 修改 `frontend/main/src/app/[locale]/page.tsx`：
+   - `categoryMeta` - 分类元数据（用于 CategorySection 组件）
+   - `categoryPages` - 首页分类入口卡片
 2. 修改 `frontend/main/src/app/[locale]/[categoryId]/page.tsx` 中的 `categoryMeta`
-3. 修改 `frontend/main/src/components/layout/Header.tsx` 中的 `categoryMeta`
+3. 修改 `frontend/main/src/components/layout/Header.tsx` 中的 `categoryMeta` 和下拉菜单
 
 ---
 
