修改工具页技术文档

--- a/docs/工具页技术文档.md
+++ b/docs/工具页技术文档.md
@@ -1,27 +1,324 @@
-# TooliBox 工具页技术文档
+# 工具页技术文档 v1.0
 
-## 一、概述
-
-工具页是用户与具体工具交互的核心页面，负责展示工具信息、渲染动态表单、处理文件上传和下载。
-
-### 路由结构
-
-```
-/{locale}/{categoryId}/{slug}
-例如: /zh/pdf-tools/compress
-```
-
-| 参数 | 说明 | 示例 |
-|-----|------|------|
-| locale | 语言代码 | en, zh, es |
-| categoryId | 分类 ID | pdf-tools, image-tools |
-| slug | 工具唯一标识 | compress, merge |
+适用于 PDF-TOOLS / IMAGE-TOOLS / 所有未来工具
 
 ---
 
-## 二、页面架构
+## 一、概述
 
-### 文件位置
+### 1.1 文档目的
+
+本技术文档用于指导：
+
+- 构建"插件驱动"的前端工具页面
+- 使用 ui.json 控制文案/UI/SEO
+- 使用 schema.json 控制动态选项与表单
+- 使用 handler 控制工具核心逻辑
+- 工具页面如何通过 SSR 完整渲染 SEO
+
+### 1.2 核心原理
+
+工具页 = 纯展示层（UI Shell） + 插件数据驱动
+
+```
+用户访问 /{locale}/{categoryId}/{slug}
+         ↓
+后端插件系统读取 JSON 配置
+         ↓
+Next.js SSR 生成 SEO
+         ↓
+SchemaRenderer 动态渲染 UI
+         ↓
+用户提交 → POST /api/{category}/{slug} → handler 处理
+```
+
+前端不包含任何业务逻辑，所有工具逻辑在后端 handler 中实现。
+
+### 1.3 路由规范
+
+```
+/{locale}/{categoryId}/{slug}
+```
+
+| URL | 说明 |
+|-----|------|
+| `/zh/pdf-tools/merge` | 中文 PDF 合并工具 |
+| `/en/pdf-tools/split` | 英文 PDF 拆分工具 |
+| `/es/image-tools/resize` | 西班牙语图片调整工具 |
+
+| 字段       | 说明                                |
+| ---------- | ----------------------------------- |
+| locale     | 多语言（en / zh / es）              |
+| categoryId | 前端分类名（pdf-tools / image-tools）|
+| slug       | 工具唯一标识                        |
+
+---
+
+## 二、插件目录结构
+
+所有插件必须放在 `backend/plugins/` 目录下：
+
+```
+backend/plugins/
+├── pdf-merge/
+│   ├── plugin.json      # 必需：插件配置
+│   ├── ui.json          # 必需：UI 和 SEO 配置
+│   ├── schema.json      # 必需：表单配置
+│   └── handler/
+│       └── index.ts     # 必需：处理逻辑
+├── pdf-split/
+│   └── ...
+└── image-resize/
+    └── ...
+```
+
+**命名规范**：
+- 目录名使用短横线连接：`pdf-merge`、`image-resize`
+- 所有文件名必须全小写
+- 目录名建议与 slug 保持一致
+
+---
+
+## 三、核心配置文件
+
+### 3.1 plugin.json
+
+用于让系统识别工具属于哪个分类、用什么 slug 打开。
+
+```json
+{
+  "slug": "merge",
+  "category": "pdf",
+  "apiPath": "/api/pdf/merge",
+  "order": 1
+}
+```
+
+| 字段     | 类型   | 必填 | 说明                              |
+| -------- | ------ | ---- | --------------------------------- |
+| slug     | string | ✅   | 工具唯一 ID，用于 URL 和 API 查询 |
+| category | string | ✅   | 后端 API 分类（pdf / image）      |
+| apiPath  | string | ✅   | handler API 路径                  |
+| order    | number | ✅   | 分类页排序（数字越小越靠前）      |
+
+---
+
+### 3.2 ui.json
+
+包含 SEO、UI 文案、FAQ、标题等。
+
+```json
+{
+  "title": {
+    "en": "Merge PDF Online",
+    "zh": "在线合并 PDF",
+    "es": "Fusionar PDF en línea"
+  },
+  "description": {
+    "en": "Merge multiple PDF files into one document quickly and easily.",
+    "zh": "快速轻松地将多个 PDF 文件合并为一个文档。",
+    "es": "Combine varios archivos PDF en un documento de forma rápida y sencilla."
+  },
+  "h1": {
+    "en": "Merge PDF",
+    "zh": "合并 PDF",
+    "es": "Fusionar PDF"
+  },
+  "icon": "📄",
+  "categoryName": {
+    "en": "PDF Tools",
+    "zh": "PDF 工具",
+    "es": "Herramientas PDF"
+  },
+  "faq": {
+    "en": [
+      {
+        "question": "How do I merge PDF files?",
+        "answer": "Upload your PDF files, arrange them in the desired order, and click the merge button."
+      }
+    ],
+    "zh": [
+      {
+        "question": "如何合并 PDF 文件？",
+        "answer": "上传您的 PDF 文件，按所需顺序排列，然后点击合并按钮。"
+      }
+    ]
+  }
+}
+```
+
+| 字段         | 类型                   | 必填 | 说明             |
+| ------------ | ---------------------- | ---- | ---------------- |
+| title        | Record<string, string> | ✅   | SEO 标题         |
+| description  | Record<string, string> | ✅   | SEO 描述         |
+| h1           | Record<string, string> | ✅   | 页面 H1 标题     |
+| icon         | string                 | ✅   | 工具图标（emoji）|
+| categoryName | Record<string, string> | ❌   | 分类名称（可选） |
+| faq          | Record<string, FAQ[]>  | ❌   | 常见问题列表     |
+
+⚠️ **FAQ 格式**：必须使用 `question` 和 `answer`，不是 `q` 和 `a`。
+
+---
+
+### 3.3 schema.json
+
+定义工具页面 UI，包括上传区域、按钮、参数输入等。
+
+```json
+{
+  "upload": {
+    "multiple": true,
+    "maxFiles": 20,
+    "types": ["application/pdf"],
+    "maxSize": 104857600
+  },
+  "options": [],
+  "submitText": {
+    "en": "Merge PDF",
+    "zh": "合并 PDF",
+    "es": "Fusionar PDF"
+  },
+  "outputType": "file"
+}
+```
+
+#### upload 配置
+
+| 字段     | 类型     | 说明                                    |
+| -------- | -------- | --------------------------------------- |
+| multiple | boolean  | 是否允许多文件上传                      |
+| maxFiles | number   | 最大文件数量                            |
+| types    | string[] | 允许的 MIME 类型                        |
+| maxSize  | number   | 单文件最大大小（字节，100MB=104857600） |
+
+#### outputType
+
+| 值   | 说明           |
+| ---- | -------------- |
+| file | 返回单个文件   |
+| zip  | 返回 ZIP 压缩包|
+| json | 返回 JSON 数据 |
+
+#### options 配置
+
+支持的选项类型：
+
+**checkbox**
+```json
+{
+  "name": "removeMetadata",
+  "type": "checkbox",
+  "label": { "en": "Remove metadata", "zh": "移除元数据" },
+  "checkboxLabel": { "en": "Yes, remove", "zh": "是，移除" },
+  "default": false
+}
+```
+
+**select**
+```json
+{
+  "name": "quality",
+  "type": "select",
+  "label": { "en": "Quality", "zh": "质量" },
+  "choices": [
+    { "value": "high", "label": { "en": "High", "zh": "高" } },
+    { "value": "medium", "label": { "en": "Medium", "zh": "中" } },
+    { "value": "low", "label": { "en": "Low", "zh": "低" } }
+  ],
+  "default": "medium"
+}
+```
+
+**number**
+```json
+{
+  "name": "dpi",
+  "type": "number",
+  "label": { "en": "DPI", "zh": "分辨率" },
+  "placeholder": "150",
+  "min": 72,
+  "max": 300,
+  "default": 150
+}
+```
+
+**range**
+```json
+{
+  "name": "compression",
+  "type": "range",
+  "label": { "en": "Compression Level", "zh": "压缩级别" },
+  "min": 0,
+  "max": 100,
+  "default": 50
+}
+```
+
+**text**
+```json
+{
+  "name": "filename",
+  "type": "text",
+  "label": { "en": "Output filename", "zh": "输出文件名" },
+  "placeholder": "merged"
+}
+```
+
+---
+
+### 3.4 handler/index.ts
+
+后端处理程序，Express 会自动挂载 API。
+
+```typescript
+import { Request, Response } from 'express';
+import { PDFDocument } from 'pdf-lib';
+
+export default async function handler(req: Request, res: Response) {
+  try {
+    // 获取上传的文件
+    const files = req.files as Express.Multer.File[];
+
+    if (!files || files.length === 0) {
+      return res.status(400).json({ error: 'No files uploaded' });
+    }
+
+    // 获取选项参数（值为字符串）
+    const removeMetadata = req.body.removeMetadata === 'true';
+
+    // 处理逻辑
+    const mergedPdf = await PDFDocument.create();
+
+    for (const file of files) {
+      const pdf = await PDFDocument.load(file.buffer);
+      const pages = await mergedPdf.copyPages(pdf, pdf.getPageIndices());
+      pages.forEach(page => mergedPdf.addPage(page));
+    }
+
+    const pdfBytes = await mergedPdf.save();
+
+    // 返回文件
+    res.setHeader('Content-Type', 'application/pdf');
+    res.setHeader('Content-Disposition', 'attachment; filename="merged.pdf"');
+    res.send(Buffer.from(pdfBytes));
+  } catch (error) {
+    console.error('Processing failed:', error);
+    res.status(500).json({ error: 'Processing failed' });
+  }
+}
+```
+
+**重要**：
+- 使用 `export default`，不是 `module.exports`
+- 单文件上传：`req.file`
+- 多文件上传：`req.files`
+- 选项参数在 `req.body` 中，值为字符串
+
+---
+
+## 四、前端架构
+
+### 4.1 文件位置
 
 ```
 frontend/main/src/
@@ -36,7 +333,7 @@ frontend/main/src/
     └── api.ts                  # API 调用封装
 ```
 
-### 页面结构
+### 4.2 页面结构
 
 ```
 ┌─────────────────────────────────────┐
@@ -50,18 +347,10 @@ frontend/main/src/
 ├─────────────────────────────────────┤
 │  ┌───────────────────────────────┐  │
 │  │      SchemaRenderer           │  │
-│  │  ┌─────────────────────────┐  │  │
-│  │  │    文件上传区域          │  │  │
-│  │  └─────────────────────────┘  │  │
-│  │  ┌─────────────────────────┐  │  │
-│  │  │    已选文件列表          │  │  │
-│  │  └─────────────────────────┘  │  │
-│  │  ┌─────────────────────────┐  │  │
-│  │  │    选项表单              │  │  │
-│  │  └─────────────────────────┘  │  │
-│  │  ┌─────────────────────────┐  │  │
-│  │  │    提交按钮              │  │  │
-│  │  └─────────────────────────┘  │  │
+│  │  - 文件上传区域                │  │
+│  │  - 已选文件列表                │  │
+│  │  - 选项表单                    │  │
+│  │  - 提交按钮                    │  │
 │  └───────────────────────────────┘  │
 ├─────────────────────────────────────┤
 │           FAQ 区域                   │
@@ -70,265 +359,18 @@ frontend/main/src/
 └─────────────────────────────────────┘
 ```
 
----
-
-## 三、核心组件
-
-### 3.1 工具页主组件 (page.tsx)
-
-位置：`frontend/main/src/app/[locale]/[categoryId]/[slug]/page.tsx`
-
-#### 功能
-
-1. 服务端获取插件数据
-2. 生成 SEO 元数据
-3. 渲染页面布局
-
-#### 关键代码
-
-```typescript
-interface ToolPageProps {
-  params: {
-    categoryId: string;
-    slug: string;
-    locale: string;
-  };
-}
-
-export default async function ToolPage({ params }: ToolPageProps) {
-  const { categoryId, slug, locale } = params;
-
-  // 获取插件数据
-  const response = await fetchPlugin(slug, locale);
-  if (!response.success) {
-    notFound();
-  }
-  const plugin = response.data;
-
-  return (
-    <div className="flex flex-col min-h-screen">
-      <Header />
-      <main className="flex-1 container mx-auto px-4 py-8">
-        <Breadcrumb items={[...]} />
-
-        {/* 工具标题区 */}
-        <div className="text-center mb-8">
-          <span className="text-6xl">{plugin.icon}</span>
-          <h1>{plugin.h1 || plugin.title}</h1>
-          <p>{plugin.description}</p>
-        </div>
-
-        {/* 工具操作区 */}
-        <SchemaRenderer plugin={plugin} locale={locale} />
-
-        {/* FAQ 区域 */}
-        {plugin.faq && <FAQSection faq={plugin.faq} />}
-      </main>
-      <Footer />
-    </div>
-  );
-}
-```
-
-#### SEO 元数据生成
-
-```typescript
-export async function generateMetadata({ params }: ToolPageProps): Promise<Metadata> {
-  const plugin = await fetchPlugin(slug, locale);
-
-  return {
-    title: `${plugin.title} - Toolibox`,
-    description: plugin.description,
-    alternates: {
-      canonical: canonicalUrl,
-      languages: {
-        'en': `${baseUrl}/en/${categoryId}/${slug}`,
-        'zh': `${baseUrl}/zh/${categoryId}/${slug}`,
-        'es': `${baseUrl}/es/${categoryId}/${slug}`,
-      }
-    },
-    openGraph: { ... }
-  };
-}
-```
-
----
-
-### 3.2 表单渲染器 (SchemaRenderer)
+### 4.3 SchemaRenderer 组件
 
 位置：`frontend/main/src/components/tool/SchemaRenderer.tsx`
 
-#### 功能
-
-根据插件的 `schema.json` 配置动态渲染：
-- 文件上传区域（支持拖拽）
-- 选项表单（select、number、text、range 等）
-- 提交按钮
+功能：
+- 根据 schema.upload 渲染文件上传区域（支持拖拽）
+- 根据 schema.options 动态渲染表单选项
+- 根据 schema.submitText 渲染提交按钮
+- 调用后端 API 触发 handler
 - 处理文件下载
 
-#### Props 接口
-
-```typescript
-interface SchemaRendererProps {
-  plugin: PluginData;
-  locale: string;
-}
-```
-
-#### 状态管理
-
-```typescript
-const [files, setFiles] = useState<File[]>([]);      // 已选文件
-const [options, setOptions] = useState<Record<string, any>>({});  // 表单选项
-const [loading, setLoading] = useState(false);       // 加载状态
-const [error, setError] = useState<string | null>(null);  // 错误信息
-```
-
-#### 文件上传
-
-使用 `react-dropzone` 实现拖拽上传：
-
-```typescript
-const { getRootProps, getInputProps, isDragActive } = useDropzone({
-  onDrop,
-  accept: getAcceptTypes(schema.upload.types),  // MIME 类型
-  maxSize: schema.upload.maxSize,               // 最大文件大小
-  multiple: schema.upload.multiple              // 是否多选
-});
-```
-
-#### 表单提交流程
-
-```typescript
-const handleSubmit = async () => {
-  // 1. 验证文件
-  if (files.length === 0) {
-    setError('请先上传文件');
-    return;
-  }
-
-  // 2. 构建 FormData
-  const formData = new FormData();
-  if (schema.upload.multiple) {
-    files.forEach((file) => formData.append('files', file));
-  } else {
-    formData.append('file', files[0]);
-  }
-  Object.entries(options).forEach(([key, value]) => {
-    formData.append(key, String(value));
-  });
-
-  // 3. 调用 API
-  const blob = await submitToolRequest(apiPath, formData);
-
-  // 4. 触发下载
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url;
-  a.download = getOutputFilename(plugin);
-  a.click();
-  URL.revokeObjectURL(url);
-};
-```
-
-#### 选项类型渲染
-
-| type | 渲染组件 | 额外属性 |
-|------|---------|---------|
-| select | `<select>` | choices |
-| number | `<input type="number">` | placeholder |
-| text | `<input type="text">` | placeholder |
-| range | `<input type="range">` | min, max, default |
-
----
-
-### 3.3 面包屑导航 (Breadcrumb)
-
-位置：`frontend/main/src/components/layout/Breadcrumb.tsx`
-
-```typescript
-interface BreadcrumbItem {
-  label: string;
-  href?: string;  // 无 href 表示当前页
-}
-
-// 使用示例
-<Breadcrumb
-  items={[
-    { label: '首页', href: `/${locale}` },
-    { label: 'PDF 工具', href: `/${locale}/pdf-tools` },
-    { label: '压缩 PDF' }  // 当前页，无链接
-  ]}
-/>
-```
-
----
-
-## 四、数据流
-
-### 完整数据流程
-
-```
-1. 用户访问 /zh/pdf-tools/compress
-         ↓
-2. Next.js 路由匹配 [locale]/[categoryId]/[slug]/page.tsx
-         ↓
-3. 服务端调用 fetchPlugin('compress', 'zh')
-         ↓
-4. 后端返回插件配置 (plugin.json + ui.json + schema.json)
-         ↓
-5. 页面渲染，SchemaRenderer 根据 schema 生成表单
-         ↓
-6. 用户上传文件，填写选项
-         ↓
-7. 点击提交，调用 POST /api/pdf/compress
-         ↓
-8. 后端 handler 处理文件
-         ↓
-9. 返回处理后的文件 (Blob)
-         ↓
-10. 前端触发浏览器下载
-```
-
-### API 调用
-
-```typescript
-// 获取插件信息
-GET /api/plugins/{slug}?lang={locale}
-
-// 响应
-{
-  "success": true,
-  "data": {
-    "slug": "compress",
-    "category": "pdf",
-    "apiPath": "/api/pdf/compress",
-    "title": "压缩 PDF",
-    "description": "...",
-    "icon": "🗜️",
-    "h1": "在线压缩 PDF",
-    "faq": [...],
-    "schema": {
-      "upload": { ... },
-      "options": [ ... ],
-      "submitText": "压缩 PDF",
-      "outputType": "file"
-    }
-  }
-}
-
-// 提交工具请求
-POST /api/{category}/{slug}
-Content-Type: multipart/form-data
-
-file: <binary>
-option1: value1
-option2: value2
-```
-
----
-
-## 五、PluginData 类型定义
+### 4.4 PluginData 类型定义
 
 ```typescript
 export interface PluginData {
@@ -346,166 +388,314 @@ export interface PluginData {
   }>;
   schema: {
     upload: {
-      multiple: boolean;  // 是否多文件
-      maxFiles: number;   // 最大文件数
-      types: string[];    // 允许的 MIME 类型
-      maxSize: number;    // 最大文件大小 (字节)
+      multiple: boolean;
+      maxFiles: number;
+      types: string[];
+      maxSize: number;
     };
-    options: Array<{      // 表单选项
+    options: Array<{
       name: string;
-      type: string;       // select, number, text, range
+      type: string;
       label: string;
       placeholder?: string;
       min?: number;
       max?: number;
       default?: any;
       choices?: Array<{ value: string; label: string }>;
+      checkboxLabel?: string;
     }>;
-    submitText: string;   // 提交按钮文本 (已本地化)
-    outputType: string;   // 输出类型: file, zip
+    submitText: string;
+    outputType: string;
   };
 }
 ```
 
 ---
 
-## 六、分类映射
+## 五、部署流程
 
-```typescript
-// categoryId -> category
-const categoryMap: Record<string, string> = {
-  'pdf-tools': 'pdf',
-  'image-tools': 'image'
-};
+### 第 1 步：创建插件目录
 
-// categoryId -> 显示名称
-const categoryNames: Record<string, Record<string, string>> = {
-  'pdf-tools': {
-    en: 'PDF Tools',
-    zh: 'PDF 工具',
-    es: 'Herramientas PDF'
+```bash
+cd /var/www/toolibox
+mkdir -p backend/plugins/pdf-merge/handler
+```
+
+### 第 2 步：创建四个文件
+
+在 `backend/plugins/pdf-merge/` 目录下创建：
+- plugin.json
+- ui.json
+- schema.json
+- handler/index.ts
+
+### 第 3 步：重启后端
+
+```bash
+# Docker 部署
+docker-compose restart backend-main
+
+# 或重新构建
+docker-compose build backend-main && docker-compose up -d
+```
+
+后台日志应出现：
+
+```
+✅ Loaded plugin: pdf-merge
+```
+
+### 第 4 步：测试工具页面
+
+浏览器访问：
+
+```
+https://yourdomain.com/en/pdf-tools/merge
+https://yourdomain.com/zh/pdf-tools/merge
+```
+
+---
+
+## 六、API 接口
+
+### 获取所有插件
+
+```
+GET /api/plugins?lang=zh
+```
+
+响应：
+
+```json
+{
+  "success": true,
+  "data": {
+    "plugins": [...],
+    "categories": {
+      "pdf": [...],
+      "image": [...]
+    }
+  }
+}
+```
+
+### 获取单个插件
+
+```
+GET /api/plugins/{slug}?lang=zh
+```
+
+响应：
+
+```json
+{
+  "success": true,
+  "data": {
+    "slug": "merge",
+    "category": "pdf",
+    "apiPath": "/api/pdf/merge",
+    "title": "合并 PDF",
+    "description": "...",
+    "h1": "...",
+    "icon": "📄",
+    "faq": [...],
+    "schema": {...}
+  }
+}
+```
+
+### 调用工具 API
+
+```
+POST /api/{category}/{slug}
+Content-Type: multipart/form-data
+
+files: [File, File, ...]
+option1: value1
+option2: value2
+```
+
+---
+
+## 七、后端插件加载机制
+
+路径：`backend/src/plugin-loader.ts`
+
+启动时执行：
+1. 扫描 `backend/plugins/*`
+2. 读取每个插件的 JSON 配置和 handler
+3. 自动挂载 API：`/api/{category}/{slug}`
+4. 向前端提供插件列表
+
+新增插件无需修改任何前端或主后端代码，只需重启后端。
+
+---
+
+## 八、常见问题排查
+
+| 问题                | 原因                                |
+| ------------------- | ----------------------------------- |
+| 工具页 404          | plugin.json 的 slug 写错            |
+| 工具页内容不显示    | schema.json 格式不正确              |
+| SEO 不显示          | ui.json 缺少 title/description      |
+| 点击按钮报错        | handler/index.ts 路径或返回文件错误 |
+| API 不加载          | 后端未重启、文件名大小写错误        |
+| 分类页无法显示工具  | plugin.json 中 category 填错        |
+| FAQ 不显示          | 使用了 q/a 而不是 question/answer   |
+| 选项不渲染          | schema.options 格式错误             |
+
+---
+
+## 九、完整插件示例
+
+### 目录结构
+
+```
+backend/plugins/pdf-merge/
+├── plugin.json
+├── ui.json
+├── schema.json
+└── handler/
+    └── index.ts
+```
+
+### plugin.json
+
+```json
+{
+  "slug": "merge",
+  "category": "pdf",
+  "apiPath": "/api/pdf/merge",
+  "order": 1
+}
+```
+
+### ui.json
+
+```json
+{
+  "title": {
+    "en": "Merge PDF Online",
+    "zh": "在线合并 PDF"
   },
-  'image-tools': {
-    en: 'Image Tools',
-    zh: '图像工具',
-    es: 'Herramientas de imagen'
-  }
-};
-```
-
----
-
-## 七、错误处理
-
-### 404 处理
-
-```typescript
-// 插件不存在时返回 404
-const response = await fetchPlugin(slug, locale);
-if (!response.success) {
-  notFound();  // Next.js 内置 404 页面
-}
-```
-
-### 表单错误
-
-```typescript
-// SchemaRenderer 中的错误显示
-{error && (
-  <div className="bg-red-50 text-red-600 p-3 rounded-lg text-sm">
-    {error}
-  </div>
-)}
-```
-
-### 多语言错误提示
-
-```typescript
-const errorMessages = {
-  noFile: {
-    en: 'Please upload a file first',
-    zh: '请先上传文件',
-    es: 'Por favor sube un archivo primero'
-  }
-};
-```
-
----
-
-## 八、样式规范
-
-### 主要样式类
-
-| 区域 | 样式 |
-|-----|------|
-| 工具卡片 | `bg-white rounded-2xl shadow-lg p-8` |
-| 上传区域 | `border-2 border-dashed rounded-xl p-8` |
-| 提交按钮 | `w-full py-3 px-6 bg-primary text-white rounded-lg` |
-| FAQ 区域 | `bg-gray-50 rounded-2xl p-8` |
-
-### 状态样式
-
-```css
-/* 拖拽激活 */
-.dropzone-active {
-  border-color: var(--primary);
-  background-color: rgba(var(--primary-rgb), 0.05);
-}
-
-/* 按钮禁用 */
-.button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-```
-
----
-
-## 九、扩展指南
-
-### 添加新的选项类型
-
-1. 在 `schema.json` 中定义新类型
-2. 在 `SchemaRenderer.tsx` 的 `renderOptionInput` 函数中添加渲染逻辑
-
-```typescript
-function renderOptionInput(opt, value, onChange) {
-  switch (opt.type) {
-    case 'color':  // 新增颜色选择器
-      return (
-        <input
-          type="color"
-          value={value || '#000000'}
-          onChange={(e) => onChange(e.target.value)}
-        />
-      );
-    // ... 其他类型
+  "description": {
+    "en": "Combine multiple PDF files into one document.",
+    "zh": "将多个 PDF 文件合并为一个文档。"
+  },
+  "h1": {
+    "en": "Merge PDF",
+    "zh": "合并 PDF"
+  },
+  "icon": "📄",
+  "faq": {
+    "en": [
+      { "question": "How to merge?", "answer": "Upload and click merge." }
+    ],
+    "zh": [
+      { "question": "如何合并？", "answer": "上传文件后点击合并。" }
+    ]
   }
 }
 ```
 
-### 添加新的输出类型
+### schema.json
 
-1. 修改 `getOutputFilename` 函数
-2. 根据 `schema.outputType` 返回正确的文件扩展名
+```json
+{
+  "upload": {
+    "multiple": true,
+    "maxFiles": 20,
+    "types": ["application/pdf"],
+    "maxSize": 104857600
+  },
+  "options": [],
+  "submitText": {
+    "en": "Merge PDF",
+    "zh": "合并 PDF"
+  },
+  "outputType": "file"
+}
+```
+
+### handler/index.ts
 
 ```typescript
-function getOutputFilename(plugin: PluginData): string {
-  const { schema, slug } = plugin;
-  const extMap: Record<string, string> = {
-    file: 'pdf',
-    zip: 'zip',
-    image: 'png',
-    json: 'json'
-  };
-  const ext = extMap[schema.outputType] || 'bin';
-  return `${slug}-result.${ext}`;
+import { Request, Response } from 'express';
+import { PDFDocument } from 'pdf-lib';
+
+export default async function handler(req: Request, res: Response) {
+  try {
+    const files = req.files as Express.Multer.File[];
+    if (!files || files.length < 2) {
+      return res.status(400).json({ error: 'Please upload at least 2 files' });
+    }
+
+    const mergedPdf = await PDFDocument.create();
+
+    for (const file of files) {
+      const pdf = await PDFDocument.load(file.buffer);
+      const pages = await mergedPdf.copyPages(pdf, pdf.getPageIndices());
+      pages.forEach(page => mergedPdf.addPage(page));
+    }
+
+    const pdfBytes = await mergedPdf.save();
+
+    res.setHeader('Content-Type', 'application/pdf');
+    res.setHeader('Content-Disposition', 'attachment; filename="merged.pdf"');
+    res.send(Buffer.from(pdfBytes));
+  } catch (error) {
+    console.error('Merge failed:', error);
+    res.status(500).json({ error: 'Merge failed' });
+  }
 }
 ```
 
 ---
 
-## 十、注意事项
+## 十、验收标准
+
+部署成功时：
+
+- ✅ 分类页 /pdf-tools 自动出现工具卡片
+- ✅ 工具页自动形成 URL
+- ✅ SEO 自动渲染（title, description）
+- ✅ 上传组件正常工作
+- ✅ 选项表单正确渲染
+- ✅ 后端 handler 可正常处理
+- ✅ 返回文件可下载
+
+---
+
+## 十一、快速参考
+
+### 新增工具只需：
+
+```
+backend/plugins/{tool}/
+├── plugin.json
+├── ui.json
+├── schema.json
+└── handler/index.ts
+```
+
+然后重启后端：
+
+```bash
+docker-compose restart backend-main
+```
+
+### 不需要：
+
+- ❌ 修改导航页
+- ❌ 修改前端代码
+- ❌ 修改后端代码
+- ❌ 重新部署前端
+
+前端和路由全部自动生成。
+
+---
+
+## 十二、注意事项
 
 1. **服务端渲染**：工具页使用 Next.js 服务端渲染，SEO 友好
 2. **客户端交互**：SchemaRenderer 是客户端组件 (`'use client'`)
